<resources>
    <string name="app_name">LabsCM20181</string>
    <string name="bot_platos">Meals</string>
    <string name="bot_bebidas">Drinks</string>
    <string name="lbplato_nombre">Meal:</string>
    <string name="lbplato_horario">Horary:</string>
    <string name="lbplato_tipo">Type:</string>
    <string name="lbplato_tiempre">Cooking Time:</string>
    <string name="lbplato_precio">Price:</string>
    <string name="lbplato_ingredientes">Ingredients:</string>
    <string name="tit_reg_platos">Register Meals</string>
    <string name="nom_platoreg">Name:</string>
    <string name="horario_platoreg">Horary:</string>
    <string name="horario_platocheckmanana">Morning</string>
    <string name="horario_platochecktarde">Evening</string>
    <string name="horario_platochecknoche">Night</string>
    <string name="tipoplatoreg">Type:</string>
    <string name="tipoplatocheckentrada">Starter</string>
    <string name="tipoplatocheckplafuerte">Main Course</string>
    <string name="tiempre_platoreg">Cooking Time:</string>
    <string name="bot_tiempre_platoreg">Select</string>
    <string name="precio_platoreg">Price:</string>
    <string name="foto_platoreg">PHoto:</string>
    <string name="bot_foto_platoreg">Select</string>
    <string name="bot_regplato">Register Meal</string>
    <string name="ingredientes_platoreg">Ingredients</string>
    <string name="registrar_Bebidas">Register Drinks</string>
    <string name="nombre_bebida">Name:</string>
    <string name="precio_bebidas">Price:</string>
    <string name="selec_precio_bebida">Select</string>
    <string name="bot_registrar_Bebida">Register Drink</string>
    <string name="foto_bebida">Photo:</string>
    <string name="ingredientes_bebidas">Ingredients</string>
    <string name="text_picker_tiempre">Select</string>
    <string name="text_min_tiempre">min</string>
    <string name="titulo_picker_tiempre">Cooking Time</string>
    <string name="tit_reg_usuario">Registro de Usuarios</string>
    <string name="lbl_nom_usu">Nombre:</string>
    <string name="lbl_nom_correo">Correo:</string>
    <string name="lbl_selec_foto_usu">Foto:</string>
    <string name="bot_sel_foto_usu">Seleccionar</string>
    <string name="lbl_contra_usu">Contraseña:</string>
    <string name="bot_reg_usu">Registrar Usuario</string>
    <string name="tit_inicio_ses">Tus Bebidas y Mejores Platos</string>
    <string name="lbl_is_nombre">Nombre:</string>
    <string name="lbl_is_contra">Contraseña:</string>
    <string name="bot_inicio_ses">Iniciar Sesión</string>
    <string name="sin_regis">¿No tienes cuenta?!.Registrate!</string>
    <string name="bot_crear_cuenta">Registrarse</string>
    <string name="title_activity_naviga_drawer_restau">naviga_drawer_restau</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nd_perfil">Perfil</string>
    <string name="nd_platos">Platos</string>
    <string name="nd_bebidas">Bebidas</string>
    <string name="nd_configuracion">Configuraciones</string>
    <string name="nd_acercade">Acerca de</string>
    <string name="nd_cerrar_ses">Cerrar Sesión</string>
    <string name="title_activity_nd_restaurant">nd_restaurant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nd_plato">Platos</string>
    <string name="nd_bebida">Bebidas</string>
    <string name="nd_cerrar_sesion">Cerrar Sesión</string>
    <string name="tit_perf_usuario">Perfil de Usuario</string>
    <string name="lab_per_nom_usu">Nombre:</string>
    <string name="lab_per_correo_usu">Correo:</string>
    <string name="buscar_nombre">Buscar Nombre</string>
    <string name="buscar_precio">Buscar Precio</string>
    <string name="det_tit_detalles">Detalles del plato</string>
    <string name="det_tit_detalles_bebi">Detalles de Bebida</string>
    <string name="det_bebida_favorito">Favorito:</string>
    <string name="det_plato_favorito">Favorito:</string>
</resources>
